<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

   <Space
       android:id="@+id/space"
       android:layout_width="match_parent"
       android:layout_height="16dp" />

   <android.support.design.widget.TextInputLayout
       android:id="@+id/textInputLayout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="24dp"
       android:layout_marginBottom="12dp"
       android:layout_marginStart="24dp"
       android:layout_marginEnd="24dp"
       app:boxBackgroundMode="outline"
       app:layout_constraintTop_toBottomOf="@id/space"
       style="@style/outlineErrorCustom"
       app:helperText="@string/required"
       app:errorEnabled="true"
       >
   <android.support.design.widget.TextInputEditText
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:inputType="text"
       android:singleLine="true"
       android:hint="@string/username"
       android:id="@+id/editText1"
       android:imeOptions="actionNext"
       />

   </android.support.design.widget.TextInputLayout>

   <android.support.design.widget.TextInputLayout
       android:id="@+id/textInputLayoutPassword"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="12dp"
       android:layout_marginBottom="12dp"
       android:layout_marginStart="24dp"
       android:layout_marginEnd="24dp"
       app:boxBackgroundMode="outline"
       app:layout_constraintTop_toBottomOf="@id/textInputLayout"
       style="@style/outlineErrorCustom"
       app:helperText="@string/required"
       app:counterMaxLength="8"
       app:counterEnabled="true"
       >
      <android.support.design.widget.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPassword"
          android:hint="@string/password"
          android:id="@+id/editText2"
          android:imeOptions="actionPrevious" />

   </android.support.design.widget.TextInputLayout>

   <android.support.design.widget.TextInputLayout
       android:id="@+id/textInputLayout1"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="12dp"
       android:layout_marginBottom="24dp"
       android:layout_marginStart="24dp"
       android:layout_marginEnd="24dp"
       app:boxBackgroundMode="outline"
       app:layout_constraintTop_toBottomOf="@id/textInputLayoutPassword"
       style="@style/Widget.MaterialComponents.TextInputLayout.OutlineBox"
       >
      <android.support.design.widget.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="number"
          android:hint="@string/number"
          android:imeOptions="actionSend"
          />

   </android.support.design.widget.TextInputLayout>

   <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="32dp"
          android:layout_marginBottom="12dp"
          android:layout_marginStart="24dp"
          android:layout_marginEnd="24dp"
          app:boxBackgroundMode="outline"
          app:helperText="@string/date_format"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlineBox"
          android:id="@+id/textInputLayout2"
          app:layout_constraintTop_toBottomOf="@id/textInputLayout1">

      <android.support.design.widget.TextInputEditText
          android:id="@+id/edit1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="date"
          android:hint="@string/date"
          android:imeOptions="actionSearch"/>

      </android.support.design.widget.TextInputLayout>
   <android.support.design.widget.TextInputLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       style="@style/Widget.MaterialComponents.TextInputLayout.OutlineBox"
       android:layout_marginTop="12dp"
       android:layout_marginBottom="24dp"
       android:layout_marginStart="24dp"
       android:layout_marginEnd="24dp"
       app:boxBackgroundMode="outline"
       android:id="@+id/textInputLayout3"
       app:layout_constraintTop_toBottomOf="@id/textInputLayout2">

      <android.support.design.widget.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="phone"
          android:hint="@string/phone"
          android:imeOptions="actionGo"/>
   </android.support.design.widget.TextInputLayout>
   <android.support.design.widget.TextInputLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="32dp"
       android:layout_marginBottom="24dp"
       android:layout_marginStart="24dp"
       android:layout_marginEnd="24dp"
       app:boxBackgroundMode="outline"
       style="@style/Widget.MaterialComponents.TextInputLayout.OutlineBox"
       android:id="@+id/textInputLayout4"
       app:layout_constraintTop_toBottomOf="@id/textInputLayout3"
       >

      <android.support.design.widget.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textEmailAddress"
          android:hint="@string/email"
          android:imeOptions="actionDone"/>

   </android.support.design.widget.TextInputLayout>

   <android.support.design.button.MaterialButton
       android:id="@+id/button"
       style="@style/Widget.MaterialComponents.Button"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_margin="24dp"
       android:text="@string/submit"
       app:layout_constraintTop_toBottomOf="@id/textInputLayout4"
       app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>