<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="50dp">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlineBox"
        app:helperText="@string/helper"
        app:counterEnabled="true"
        android:hint="@string/outlineXmlDefault"
        >

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="60dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout"
        app:helperText="@string/helper"
        app:counterEnabled="true"
        android:hint="@string/outlinexml"
        style="@style/OutlineBoxTextField"
        app:boxStrokeWidth="250dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            />

    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>