<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="50dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        app:helperText="@string/helper"
        app:counterEnabled="true"
        android:hint="@string/outlineDenseDefault"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlineBox.Dense">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="60dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout"
        app:helperText="@string/helper"
        app:counterEnabled="true"
        android:hint="@string/outlineDense"
        style="@style/OutlineBoxDenseTextField">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="60dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="175dp"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout2"
        app:helperText="@string/helper"
        app:counterEnabled="true"
        android:hint="@string/outlineDense"
        style="@style/OutlineBoxDenseTextField2">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="60dp" />

    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>