<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="50dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:hint="@string/filledDenseDefault"
        app:helperText="@string/helper"
        app:counterEnabled="true"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="60dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout"
        style="@style/FilledBoxDenseTextField"
        android:hint="@string/filledDense"
        app:helperText="@string/helper"
        app:counterEnabled="true"
        app:passwordToggleEnabled="true">

    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="175dp"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout2"
        style="@style/FilledDenseText"
        android:hint="@string/filledDense"
        app:helperText="@string/helper"
        app:counterEnabled="true"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>